# NIRR

./: .gitignore  README.md  eval_test.py  index.py  index_opt.py  main.py  profile_data1  ranking_eval.py  requirements.txt  run_rank_eval.py  statistics.ipynb  statistics.py  stats.py  subset_and_index.py  subset_data.py  test.ipynb  utils.py
.IPYN/: Tables.ipynb  preprocessing.ipynb
docs/latex/: rep.yaml
docs/latex/acl2021/: acl2021.run.xml  (+2 more)
evaluation/: cross_validation.py  evaluate.py  kfold.py  metrics.py  models.py  rank_eval.py  ranking_eval.py  utils.py
indexing/: index copy.py  index.py  index_opt.py  queries_sample.py  subset_and_index.py  subset_data.py  subset_data1 copy.py
notebooks/exploratory_analysis/: stat.ipynb  statistics.ipynb  stats2.ipynb
notebooks/visualization/: test.ipynb
src/: README.md  main.py  pyproject.toml  requirements.txt
src/config/: index_config.json
src/evaluation/: cross_validation.py  evaluate.py  gridsearch_params.json  kfold_preparation.py  metrics.py  model_evaluation.py  model_tuning.py  models.py  query_expansion.py  rank_eval.py  utils.py
src/evaluation/cross_validation/: cross_validation copy.py  cross_validation.py  kfold copy.py  kfold.py
src/evaluation/utils/: metrics.py
src/exploratory_analysis/: stats.py
src/indexing/: index.py  index_lucene.py  index_pyterrier.py  subset_data.py
src/retrieval/: model_tuning.py
src/retrieval/query_expansion/: query_expansion.py
src/retrieval/ranking_models/: models.py
tests/: eval_test.zsh  inspector.py  script.py
tests/.profiling/: profile_data
(+5 files in other folders)
