[tool.poetry]
name = "nir"
version = "0.1.0"
description = ""
authors = ["donidutch <wkl296@alumni.ku.dk>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8.16,<3.9"
numpy = "^1.22"
spacy = "3.5.3"
typer = "^0.7.0"
pandas = "^2.0.1"
torch = "^1.10.0+cpu"
faiss-cpu = "^1.7.4"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
tensorflow = "^2.12.0"
statsmodels = "^0.14.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
notebook = "^6.5.4"
ipywidgets = "^8.0.6"
ipykernel = "^6.23.1"
nbconvert = "^7.4.0"
nbformat = "^5.8.0"
python-terrier = "^0.9.2"
sklearn = "^0.0.post5"
pytrec-eval = "^0.5"
scienceplots = "^2.0.1"
tqdm = "^4.65.0"
pyserini = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
